syntax = "proto3";
package stride.stakeibc;
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
option go_package = "github.com/Stride-Labs/stride/v9/x/stakeibc/types";

message Validator {
  string name = 1;
  string address = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string delegation = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string slash_query_progress_tracker = 9 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  uint64 weight = 6;
  // QUESTION: Should we call this "shares_to_tokens" or "exchange_rate" ?
  string internal_share_to_tokens_rate = 10 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  // QUESTION: I was going to name this "slash_query_in_progress"
  // but thought it might be confused with the above parameter "slash_query_progress_tracker"
  // What do y'all think?
  bool slash_query_pending = 11;
  reserved 3, 4, 7, 8;
}
